# otsdaq_acc

./: CMakeLists.txt  README.md
otsdaq-acc/: CMakeLists.txt
otsdaq-acc/ACC/: ACDC.cc  ACDC.h  BlockingQueue.h  CMakeLists.txt
otsdaq-acc/DataProcessorPlugins/: ACCBurstDataSaverConsumer.h  ACCBurstDataSaverConsumer_processor.cc  CMakeLists.txt
otsdaq-acc/FEInterfaces/: CMakeLists.txt  FEACCInterface.h  FEACCInterface_interface.cc
otsdaq-acc/InterfaceTest/: CMakeLists.txt  InterfaceTestMain.cc  RunInterfaceTest.sh
